Resolve button size on mobile and add color to cards

--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -9,7 +9,7 @@
   min-width: 75px;
   border-radius: 15px;
   text-align: center;
-  padding: 0.75rem 1rem 1rem 1rem;
+  padding-top: 0.6rem;
   vertical-align: middle;
   a {
     color: white;
